tests/negative/test_decl_repeat_name.orb
fnc main() () {
    let x:i32 x:i32;
};